Sat Dec  2 22:26:00 2000  Corinna Vinschen <corinna@vinschen.de>

	* net.cc (get_inet_addr ): Close AF_UNIX socket file after reading.

Wed Nov 29 18:25:53 2000  Kazuhiro Fujieda  <fujieda@jaist.ac.jp>

	* cygheap.cc (chgheap_root::operator =): Check root dir properly.

Thu Nov 29 18:11:00 2000  Corinna Vinschen <corinna@vinschen.de>

	* net.cc (cygwin_inet_aton): Return nonzero if the address
	is valid, zero if not according to Linux man page.

Mon Nov 27 21:09:50 2000  Kelley Cook <kelley.cook@home.com>

	* mmap.cc (munmap): Check that mmap and munmap length match.

Tue Nov 28 18:08:00 2000  Corinna Vinschen <corinna@vinschen.de>

	* fhandler.cc (fhandler_disk_file::open): Check for buggy CreateFile
	condition.
	* path.cc (path_conv::check): Get file system type in call to
	GetVolumeInformation to check for file systems with buggy CreateFile.
	* path.h (enum path_types): Add PATH_HASBUGGYOPEN.
	(class path_conv): Add methods `has_buggy_open' and
	`set_has_buggy_open'.

Sun Nov 26 16:26:14 2000  Christopher Faylor <cgf@cygnus.com>

	* fhandler.cc (is_at_eof): New function.
	(fhandler_base::raw_read): Detect special case where last error ==
	ERROR_NOACCESS but the file is at EOF.  Most UNIXes do not consider
	this to be an error.

Sun Nov 26 14:37:29 2000  Christopher Faylor <cgf@cygnus.com>

	* include/cygwin/version.h: Bump DLL minor version number to 7.

Sat Nov 25 11:27:00 2000  Corinna Vinschen <corinna@vinschen.de>

	* include/cygwin/version.h: Bump minor API version due to adding
	inet_aton.

Sat Nov 25 11:07:00 2000  Corinna Vinschen <corinna@vinschen.de>

	* net.cc (cygwin_inet_aton): New function.
	* cygwin.din: Export cygwin_inet_aton as inet_aton.

Sat Nov 25 01:57:42 2000  Kazuhiro Fujieda  <fujieda@jaist.ac.jp>

	* path.cc (mount_info::read_cygdrive_info_from_registry): Read system
	cygdrive prefix with KEY_READ.
	(mount_info::get_cygdrive_info): Ditto.

Wed Nov 22 11:18:02 2000  Christopher Faylor <cgf@cygnus.com>
