@@ -47,18 +47,27 @@ dnl normal versions of a library), tasteless as that idea is.
   else
     CFLAGS="-O2"
   fi
-  if test "$ac_test_CXXFLAGS" != set; then
-    CXXFLAGS='$(CFLAGS)'
-  fi
 else
   GCC=
   test "${CFLAGS+set}" = set || CFLAGS="-g"
 fi
 ])
 
+AC_DEFUN(LIB_AC_PROG_CXX,
+[AC_BEFORE([$0], [AC_PROG_CPP])dnl
+AC_CHECK_TOOL(CXX, g++, g++)
+if test -z "$CXX"; then
+  AC_CHECK_PROG(CXX, c++, c++, , , )
+  test -z "$CC" && AC_MSG_ERROR([no acceptable cc found in \$PATH])
+fi
+
+CXXFLAGS='$(CFLAGS)'
+])
+
 AC_CANONICAL_SYSTEM
 
 LIB_AC_PROG_CC
+LIB_AC_PROG_CXX
 
 case "$with_cross_host" in
   ""|*cygwin*)
